availability <-> string inter-conversion complete

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -5,6 +5,8 @@
 </head>
 <div class="h-100 row align-items-center center text-center">
     <div class="col center text-center">
-        {{.Player}}
+        EDIT {{.Player}}<br>
+        {{.Availability}}
+        <br><br>
     </div>
 </div>
