front end for 'best time to host'

--- a/templates/error.html
+++ b/templates/error.html
@@ -13,8 +13,13 @@
         <br><br>
         <p>
             To begin, create a file in the same directory as
-            this binary. Name it <strong>conf</strong>
+            this binary.
+        </p>
+        <p>
+            Name it <strong>conf</strong>
             and place each player's name in the file, separated by a new line. Eg:
+        </p>
+        <p>
             <code>
                 <br>
                 Josh<br>
